--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.0-rc4",
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "aos": "^2.3.4",
     "cross-env": "^5.2.0",
+    "graphql-tag": "^2.10.1",
     "node-sass": "^4.11.0",
     "nuxt": "^2.4.0",
     "sass-loader": "^7.1.0",
